--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="cv.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Lato|Sulphur+Point&display=swap"
       rel="stylesheet"
@@ -25,21 +25,21 @@
           <a href="#">upgrade your browser</a> to improve your experience.
         </p>
       <![endif]-->
-      <div id="contact">
+      <div id="name">
         <h2>Richard Smith</h2>
-        <div id="email">
-          <p>
-            <a href="mailto:richard.smith.67@gmail.com"
-              >richard.smith.67@gmail.com</a
-            >
-          </p>
-          <p>
-            <a href="https://www.linkedin.com/in/richard-smith-4a734166">
-              <img src="linkedin-1.svg" alt="" width="30px" height="30px" />
-            </a>
-          </p>
-          <p>Mobile: 0745 095 1306</p>
-        </div>
+        <p>
+          <a href="https://www.linkedin.com/in/richard-smith-4a734166">
+            <img src="linkedin-1.svg" alt="" width="25px" height="25px" />
+          </a>
+        </p>
+      </div>
+      <div id="contact">
+        <p>
+          <a href="mailto:richard.smith.67@gmail.com"
+            >richard.smith.67@gmail.com</a
+          >
+        </p>
+        <p>Mobile: 0745 095 1306</p>
       </div>
       <div id="intro">
         <h2>Profile</h2>
