--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <h2>Profile</h2>
         <hr />
         <p>
-          I'm an experienced C# .NET developer with a good practical
-          understanding of software development design principles.
+          An experienced C# .NET developer with a good practical understanding
+          of software development design principles.
         </p>
         <p>
           I enjoy exploring emerging software technologies/best practices and
