--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <img src="linkedin-1.svg" alt="" width="25px" height="25px" />
           </a>
         </p>
+        <!-- <p>
+          <a href="richard_smith_67_github_io.pdf">pdf</a>
+        </p> -->
       </div>
       <div id="contact">
         <p>
